--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.0",
     "@mdi/font": "^7.4.47",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
